<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">FlagsQuiz</string>
    <string name="about_app">
        Can you name the flags of the world?
        Test your knowledge on this geography quiz to see how you do.
    </string>
    <string name="team">
        Created by team Idontknowers.\n
        Our team:\n\n
        Anatoliy Pylypchyk\n
        Natalia Slobodianiuk\n
        Anastasia Kolomoets\n
        Yaroslav Kormushyn\n
        Yulia Zvizlo\n
        Orysia Fitio\n
    </string>

    <string name="prefs_num_question_title"># of questions</string>
    <string name="prefs_num_question_summary">Number of questions per quiz</string>

    <string name="prefs_num_choices_title"># of choices</string>
    <string name="prefs_num_choices_summary">Number of choices per question</string>

    <string name="prefs_regions_title">Regions</string>
    <string name="prefs_regions_summary">Regions used in the quizzes</string>

    <string name="start">Start</string>
    <string name="settings">Settings</string>
    <string name="statistics">Statistics</string>
    <string name="about">About</string>
    <string name="welcome">Welcome :)</string>
    <string name="exit">Exit</string>
    <string name="reset">Reset</string>

    <string name="header_date">Date</string>
    <string name="header_n_questions">Questions</string>
    <string name="header_n_attempts">Attempts</string>
    <string name="header_percentage">Percentage</string>

	<string name="question">Question</string>
	<string name="flag_description">Flag</string>
</resources>
