<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/colorBackground"
	tools:context="ua.edu.lnu.ami.flagsquiz.activities.MainActivity">

	<pl.droidsonroids.gif.GifTextView
		android:id="@+id/globe"
		android:layout_width="250dp"
		android:layout_height="250dp"
		android:background="@drawable/spinning_globe_with_flags"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent" />


	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_centerVertical="true"
		android:layout_marginEnd="30dp"
		android:layout_marginStart="30dp"
		android:orientation="vertical"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/globe">

        <Button
            android:id="@+id/startButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start"
			android:onClick="startQuiz" />

        <Button
            android:id="@+id/settingsButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
			android:onClick="settings" />

        <Button
            android:id="@+id/statisticsButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/statistics"
			android:onClick="statistics" />

        <Button
            android:id="@+id/aboutButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about"
			android:onClick="about" />

        <Button
            android:id="@+id/exitButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit"
			android:onClick="exit"/>
	</LinearLayout>

</android.support.constraint.ConstraintLayout>
