<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/statistics"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintVertical_bias="0.133">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

                <TextView
                    android:id="@+id/editQuestions"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text="@string/header_n_questions" />

                <TextView
                    android:id="@+id/editAttempts"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text="@string/header_n_attempts" />

                <TextView
                    android:id="@+id/editPercentage"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text="@string/header_percentage" />
        
                <TextView
                  android:id="@+id/editDate"
                  android:layout_width="105dp"
                  android:layout_height="wrap_content"
                  android:ems="10"
                  android:text="@string/header_date" />
        </TableRow>
    </TableLayout>
</android.support.constraint.ConstraintLayout>





